# copy-that

./: .gitignore  README.md  TODO.md  config.yaml  example_config.yaml  pyproject.toml
src/copy_that/: __init__.py  config.py  discovery.py  main.py  organizer.py  processor.py
tests/: conftest.py  test_config.py  test_config_platform.py  test_config_search.py  test_discovery.py  test_logging_setup.py  test_main.py  test_organizer.py  test_processor.py  test_summary_units.py
